# github-action-setup-msys2-test

./: CMakeLists.txt  README.md  run.bat
.github/workflows/: build-windows.yml  create-github-release.yml  make-release.yml  release.yml
src/: main.cpp
